Se protege modulo ventas x articulo y mensajes de validacion de busqueda de datos en filtros

--- a/src/app/components/estadocuenta/estadocuenta.component.html
+++ b/src/app/components/estadocuenta/estadocuenta.component.html
@@ -109,7 +109,9 @@
                         <div class="form-group col-md-6">
                           <button hidden="{{ bCliente }}" type="submit"  class="btn btn-primary">CATALOGO DE CLIENTES</button>
                       </div>
-                    </div>            
+                    </div>  
+                    
+                    <p>{{sMensaje}}</p>            
   
   
                   
