--- a/src/app/components/relacionpedidos/relacionpedidos.component.html
+++ b/src/app/components/relacionpedidos/relacionpedidos.component.html
@@ -328,7 +328,8 @@
                       <div class="form-group col-md-6">
                           <button type="submit" (click)="consultaRelPed()" class="btn btn-primary">BUSCAR</button>
                       </div>
-                  </div>            
+                  </div> 
+                  <p>{{sMensaje}}</p>             
   
   
                 
