--- a/src/app/components/consultapedidos/consultapedidos.component.html
+++ b/src/app/components/consultapedidos/consultapedidos.component.html
@@ -19,6 +19,7 @@
                       name="idNumpPed"
                       #nombre="ngModel"
                       [(ngModel)]="oBuscar.ClienteCodigo"
+                      disabled="{{ bCliente }}"
                       required
                     >
                   </div>
@@ -31,11 +32,12 @@
                       name="idFilPed"
                       #nombre="ngModel"
                       [(ngModel)]="oBuscar.ClienteFilial"
+                      disabled="{{ bCliente }}"
                       required
                     >
                   </div>
                   <div class="form-group col-md-6">
-                      <button type="submit" class="btn btn-primary">CATALOGO DE CLIENTES</button>
+                      <button hidden="{{ bCliente }}"  type="submit" class="btn btn-primary">CATALOGO DE CLIENTES</button>
                   </div>
 
 
@@ -131,6 +133,13 @@
        
         <div *ngIf="bBandera" class="table-responsive-sm">
 
+          <input
+          type="text"
+          class="form-control"
+          [(ngModel)]="searchtext"
+          placeholder="Search"
+        />
+
           <table  class="table table-striped">
             <thead>
             <tr class="bg-info">
@@ -148,7 +157,7 @@
             </tr>
             </thead>
             <tbody>
-              <tr *ngFor="let ped of pedido; index as i" (click)="openPedidoDetalle(PedidoDetalle,ped.PedidoFolio)">
+              <tr *ngFor="let ped of pedido| searchconsultapedido: searchtext; index as i" (click)="openPedidoDetalle(PedidoDetalle,ped.PedidoFolio)">
                 <th scope="row">{{ i + 1 }}</th>
                 <td>{{ ped.PedidoLetra}}</td>
                 <td> <u>{{ped.PedidoFolio}}</u> </td>                
