--- a/src/app/components/estadocuenta/estadocuenta.component.html
+++ b/src/app/components/estadocuenta/estadocuenta.component.html
@@ -124,6 +124,15 @@
         </div>
 
         <div *ngIf="bBandera" class="table-responsive-sm">
+
+          <input
+          type="text"
+          class="form-control"
+          [(ngModel)]="searchtext"
+          placeholder="Search"
+        />
+    
+
           <table class="table table-hover table-striped  ">
             <thead>
               <tr class="bg-info">
@@ -143,7 +152,7 @@
               </tr>
             </thead>
             <tbody>
-              <ng-container *ngFor="let cliente of oCliente ">
+              <ng-container *ngFor="let cliente of oCliente | searchestadocuenta: searchtext">
                 <tr class="table-info">
                   <td colspan="13">{{'('+cliente.ClienteCodigo+' '+cliente.ClienteFilial+ ') ' +cliente.ClienteNombre+ '-' +cliente.Sucursal}}</td>
                 </tr>
