--- a/src/app/components/relacionpedidos/relacionpedidos.component.html
+++ b/src/app/components/relacionpedidos/relacionpedidos.component.html
@@ -343,6 +343,14 @@
        </div>
 
        <div *ngIf="bBandera" class="table-responsive-sm">
+        <input
+        type="text"
+        class="form-control"
+        [(ngModel)]="searchtext"
+        placeholder="Search"
+      />
+
+
         <table class="table table-hover table-striped  ">
           <thead>
             <tr class="bg-info">
@@ -367,7 +375,7 @@
             </tr>
           </thead>
           <tbody>
-            <ng-container *ngFor="let relPed of oRelacionPedRes.Contenido ">
+            <ng-container *ngFor="let relPed of oRelacionPedRes.Contenido | searchrelacionpedidos: searchtext ">
               <tr class="table-info">
                 <td colspan="18">{{relPed.OficinaFonelliNombre}}</td>
               </tr>
