--- a/src/app/components/ventasclientearticulo/ventasclientearticulo.component.html
+++ b/src/app/components/ventasclientearticulo/ventasclientearticulo.component.html
@@ -383,6 +383,13 @@
         </div>
 
           <div *ngIf="bBandera" class="table-responsive-sm">
+            <input
+            type="text"
+            class="form-control"
+            [(ngModel)]="searchtext"
+            placeholder="Search"
+          />
+
             <table class="table table-hover table-striped  ">
               <thead>
                 <tr class="bg-info">
@@ -397,7 +404,7 @@
                 </tr>
               </thead>
               <tbody>
-                <ng-container *ngFor="let venArt of oVentasCliRes.Contenido ">
+                <ng-container *ngFor="let venArt of oVentasCliRes.Contenido | searchventasclientearticulo: searchtext">
                   <tr class="table-info">
                     <td colspan="8">{{venArt.ClienteCodigo + ' ' + venArt.ClienteNombre }}</td>
                   </tr>
