--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -8,7 +8,7 @@
   <!--<button (click)="EliminaSesion()" class="btn btn-primary btn-sm ml-auto">Cerrar Sesión</button>-->
 
   <div class="ms-auto">
-    <button mat-button [matMenuTriggerFor]="menu">
+    <button class="boton_sesion" [matMenuTriggerFor]="menu">
       <img src="../../../assets/images/principal/usuario.png"  alt="" style="height:30px ; width:30px;">
     </button>
     <mat-menu #menu="matMenu" class="profile-dropdown">
