--- a/src/app/components/distribuidores/distribuidores.component.html
+++ b/src/app/components/distribuidores/distribuidores.component.html
@@ -1,7 +1,7 @@
 <ngb-carousel >
     <ng-template ngbSlide>
       <div class="picsum-img-wrapper">
-        <img src="../../../assets/images/banner_distribuidor/1.png" alt="Random first slide" [style]="mobileQuery.matches ? 'height: 450px; width: 450px;' : 'height: 550px; width: 800px;'"  >
+        <img [src]="mobileQuery.matches ? '../../../assets/images/banner_distribuidor/movil/1.png' : '../../../assets/images/banner_distribuidor/desk/1.png'" alt="Random first slide"  >
       </div>
       <!--<div class="carousel-caption">
         <h3>10 seconds between slides...</h3>
@@ -10,7 +10,7 @@
     </ng-template>
     <ng-template ngbSlide>
       <div class="picsum-img-wrapper">
-        <img src="../../../assets/images/banner_distribuidor/2.png" alt="Random second slide" [style]="mobileQuery.matches ? 'height: 450px; width: 450px;' : 'height: 550px; width: 800px;'">
+        <img [src]="mobileQuery.matches ? '../../../assets/images/banner_distribuidor/movil/2.png' : '../../../assets/images/banner_distribuidor/desk/2.png'" alt="Random first slide"  >
       </div>
       <!--<div class="carousel-caption">
         <h3>No mouse events...</h3>
@@ -19,7 +19,7 @@
     </ng-template>
     <ng-template ngbSlide>
       <div class="picsum-img-wrapper">
-        <img src="../../../assets/images/banner_distribuidor/3.png"  alt="Random third slide" [style]="mobileQuery.matches ? 'height: 450px; width: 450px;' : 'height: 550px; width: 800px;'">
+        <img [src]="mobileQuery.matches ? '../../../assets/images/banner_distribuidor/movil/3.png' : '../../../assets/images/banner_distribuidor/desk/3.png'" alt="Random first slide"  >
       </div>
       <!--<div class="carousel-caption">
         <h3>No keyboard...</h3>
