--- a/src/app/components/ventasclientearticulo/ventasclientearticulo.component.html
+++ b/src/app/components/ventasclientearticulo/ventasclientearticulo.component.html
@@ -383,13 +383,18 @@
         </div>
 
           <div *ngIf="bBandera" class="table-responsive-sm">
+            <div class="col-md-4 text-right">
+              <button class="btn btn-success btn-block" (click)="downloadAsPDF()">      
+                Download PDF      
+              </button>      
+            </div>
             <input
             type="text"
             class="form-control"
             [(ngModel)]="searchtext"
             placeholder="Search"
           />
-
+          <div id="pdfTable" #pdfTable>
             <table class="table table-hover table-striped  ">
               <thead>
                 <tr class="bg-info">
@@ -405,19 +410,40 @@
               </thead>
               <tbody>
                 <ng-container *ngFor="let venArt of oVentasCliRes.Contenido | searchventasclientearticulo: searchtext">
-                  <tr class="table-info">
-                    <td colspan="8">{{venArt.ClienteCodigo + ' ' + venArt.ClienteNombre }}</td>
+                  <tr class="table-info">                    
+                    <td >{{venArt.ClienteCodigo + ' ' + venArt.ClienteNombre }}</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td> 
+                    <td></td>
+                    <td></td>                 
                   </tr>
                   <ng-container *ngFor="let cat of venArt.Categorias;">
                     
                     <tr class="table-warning">
-                      <td colspan="8">{{'CATEGORIA ' +cat.CategoriaCodigo + ' : ' + cat.CategoriaNombre }}</td>
-                    </tr>
+                      <td >{{'CATEGORIA ' +cat.CategoriaCodigo + ' : ' + cat.CategoriaNombre }}</td>   
+                      <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td> 
+                    <td></td>
+                    <td></td>                    
+                    </tr> 
 
                     <ng-container *ngFor="let subCat of cat.Subcategorias;">
-                      <tr>  
-                        <td>{{subCat.SubcategoriaCodigo + ' - ' + subCat.SubcategoriaNombre }}</td>
-                      </tr> 
+                        <tr>  
+                        <td>{{subCat.SubcategoriaCodigo + ' - ' + subCat.SubcategoriaNombre }}</td>                
+                        <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td> 
+                    <td></td>
+                    <td></td> 
+                      </tr>  
 
                       <ng-container *ngFor="let linPro of subCat.LineasProducto;">
                         <tr>  
@@ -471,54 +497,14 @@
                   <td class="text-right"><strong>{{getTotalGramosPorxCliente(oVentasCliRes.Contenido)}}</strong></td>
                   <td class="text-right"><strong>{{getTotalImpVenxCliente(oVentasCliRes.Contenido)}}</strong></td>
                 </tr> 
-                <!-- <tr>
-                  <td></td>
-                  <td></td>
-                  <td><strong>Total</strong></td>
-                  <td><strong>{{getTotalPedidosOficina(relPed.TipoPedido)}}</strong></td>
-                  <td></td>
-                  <td>Pedidos</td>
-                  <td></td>
-                  <td><strong>OFICINA</strong></td>
-                  <td></td>
-                  <td></td> 
-                  <td class="text-right"><strong>{{getTotalCanPedOficina(relPed.TipoPedido)}}</strong></td>
-                  <td class="text-right"><strong>{{getTotalImportesOficina(relPed.TipoPedido)}}</strong></td>
-                  <td class="text-right"><strong>{{getTotalCPValorAgregadoOficina(relPed.TipoPedido)}}</strong></td>
-                  <td class="text-right"><strong>{{getTotalCanSurtidaOficina(relPed.TipoPedido)}}</strong></td>
-                  <td class="text-right"><strong>{{getTotalCanSurtidaImporteOficina(relPed.TipoPedido)}}</strong></td>
-                  <td class="text-right"><strong>{{getTotalCSValorImporteOficina(relPed.TipoPedido)}}</strong></td>
-                  <td class="text-right"><strong>{{getTotalDifCantidadProOficina(relPed.TipoPedido)}}</strong></td>
-                  <td class="text-right"><strong>{{getTotalDifImporteSurtidoOficina(relPed.TipoPedido)}}</strong></td>              
-                </tr> -->
               </ng-container>               
-              
-              <!-- GRAN TOTALES-->
-              <!-- <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td><strong>{{getTotalPedidosGranTotal(oRelacionPedRes.Contenido)}}</strong></td>
-                <td></td>
-                <td>Pedidos</td>
-                <td></td>
-                <td><strong>GRAN TOTAL</strong></td>
-                <td></td>
-                <td></td> 
-                <td class="text-right"><strong>{{getTotalCanPedGranTotal(oRelacionPedRes.Contenido)}}</strong></td>
-                <td class="text-right"><strong>{{getTotalImportesGranTotal(oRelacionPedRes.Contenido)}}</strong></td>
-                <td class="text-right"><strong>{{getTotalCPValorAgregadoGranTotal(oRelacionPedRes.Contenido)}}</strong></td>
-                <td class="text-right"><strong>{{getTotalCanSurtidaGranTotal(oRelacionPedRes.Contenido)}}</strong></td>
-                <td class="text-right"><strong>{{getTotalCanSurtidaImporteGranTotal(oRelacionPedRes.Contenido)}}</strong></td>
-                <td class="text-right"><strong>{{getTotalCSValorImporteGranTotal(oRelacionPedRes.Contenido)}}</strong></td>
-                <td class="text-right"><strong>{{getTotalDifCantidadProGranTotal(oRelacionPedRes.Contenido)}}</strong></td>
-                <td class="text-right"><strong>{{getTotalDifImporteSurtidoGranTotal(oRelacionPedRes.Contenido)}}</strong></td>
-              </tr> -->
+
     
               </tbody>               
             </table>
         </div> 
-      </section>
+      </div> 
+    </section>
   
   
       
